# streaming_calc_yew

./: Cargo.toml  index.html
src/: bws.rs  main.rs  subw.rs
