[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true

[profile.dev]
opt-level = 's'
lto = true

[dependencies]
wasm-bindgen = "0.2.82"
web-sys = "0.3.59"
yew = "0.19.3"
yew-router = "0.16.0"
