[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true

[profile.dev]
opt-level = 's'
lto = true

[dependencies]
wasm-bindgen = "0.2.91"
web-sys = "0.3.68"
yew = { version = "0.21.0", features = [ "csr" ] }
yew-router = "0.18.0"
